package org.example.amazonwordcloud.crawling;

public interface Crawler {
    String getProductDescription(String url);
}
